# minimal-example-pdoc-embedded-image

./: .gitignore  README.md  minimal-example-pdoc-embedded-image.code-workspace  pyproject.toml
docs/: search.js  src.html
docs/src/: main.html
src/: main.py
